security config changes for CORS